--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,10 @@ img {
 
 /* Breakpoints */
 @media screen and (max-width: 992px) {
+  .container {
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
 
 }
 
