--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   --body-font: "Poppins", sans-serif;
 
   --big-font-size: 3.5rem;
+  --biger-font-size: 2rem;
   --h1-font-size: 2.25rem;
   --h2-font-size: 1.5rem;
   --h3-font-size: 1.25;
@@ -188,13 +189,42 @@ img {
     margin-right: var(--mb-1-5);
   }
 
+  .button {
+    padding: 1rem 1.75rem;
+  }
+
+  .button__icon {
+    width: 22px;
+    height: 22px;
+  }
+
+
+
 }
 
 @media screen and (max-width: 768px) {
+  .section {
+    padding: 2rem 0 4rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
 
 }
 
+/* For small devices */
+@media screen and (max-width: 350px) {
+  :root {
+    --big-font-size: 2.25rem;
+  }
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
 
+
+
+}
 
 
 
