--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,6 @@
 
 .home__container {
-    row-gap: 7rem;
+    row-gap: 6rem;
 
 }
 
@@ -16,22 +16,23 @@
 .home__social {
     display: grid;
     grid-template-columns: max-content;
-    row-gap: 1rem;
+    row-gap: 1.2rem;
 }
 
 .home__social-icon {
-    font-size: 1.25rem;
+    font-size: 2rem;
     color: var(--tittle-color);
 }
 
 .home__social-icon:hover {
-    color: var(--tittle-color-dark);
+    color: #0000CD;
 }
 
 .home__title {
-    font-size: var(--biger-font-size);
+    font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
     margin-bottom: var(--mb-1);
+   
 }
 
 .home__hand {
@@ -72,8 +73,8 @@
     box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
     order: 1;
     justify-self: center;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     border-radius: 35%;
   
@@ -96,6 +97,7 @@
 
 .home__scroll {
     margin-left: 9.25rem;
+   
 }
 
 .wheel {
@@ -117,7 +119,8 @@
     color: var(--text-color);
     font-weight: var(--font-medium);
     margin-right: var(--mb-0-25);
-    margin-left: 2px;
+    margin-left: 8px;
+    justify-self: center;
 }
 
 .home__scroll-arrow {
