--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -118,3 +118,37 @@
     opacity: 1;
     visibility: visible;
 }
+
+
+
+/* Breakpoints */
+@media screen and (max-width: 992px) {
+  .services__container {
+    grid-template-columns: repeat(3, 218px);
+  }
+  
+  }
+  
+  @media screen and (max-width: 768px) {
+    .services__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .services__content {
+        padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+    }
+
+    .services__icon {
+        font-size: 1.5rem;
+    }
+
+  }
+  
+  @media screen and (max-width: 576px) {
+  
+  }
+  
+  /* For small devices */
+  @media screen and (max-width: 350px) {
+
+  }
