--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -145,10 +145,24 @@
   }
   
   @media screen and (max-width: 576px) {
+    .services__modal-content {
+        padding: 4.5rem 1.5rem 2.5rem;
+    }
+
+    .services__modal-description {
+        padding: 0;
+    }
   
   }
   
   /* For small devices */
   @media screen and (max-width: 350px) {
+    .services__container {
+        grid-template-columns: max-content;
+    }
+
+    .services__content {
+        padding-right: 6rem;
+    }
 
   }
