--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,9 +52,7 @@
 .nav__link:hover {
     color: var(--tittle-color-dark);
 }
-
 /* Break points */
-
 @media screen and (max-width: 768px) {
     .header {
         top: initial;
@@ -109,29 +107,15 @@
         font-size: 1.1rem;
         cursor: pointer;
     }
-
-    .nav__close {
-        color: var(--title-color-dark);
-    }
-
-    .nav__icon,
-    .nav__close,
-    .nav__toggle {
-        display: block;
-    }
-
 }
-
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-
     .nav__menu {
         padding: 2rem 0.25rem 4rem;
     }
 
     .nav__list {
-        column-gap: 0;
+        column-gap: 0; /* Apply column-gap property within .nav__list class */
     }
-
 }
