--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -123,46 +123,43 @@
 
 /* Breakpoints */
 @media screen and (max-width: 992px) {
-  .services__container {
-    grid-template-columns: repeat(3, 218px);
-  }
-  
+    .services__container {
+      grid-template-columns: repeat(auto-fit, minmax(218px, 1fr)); /* Adjusted for better responsiveness */
+    }
   }
   
   @media screen and (max-width: 768px) {
     .services__container {
-        grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
-
+  
     .services__content {
-        padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+      padding: 3.5rem 0.5rem 1.25rem 1.5rem;
     }
-
+  
     .services__icon {
-        font-size: 1.5rem;
+      font-size: 1.5rem;
     }
-
   }
   
   @media screen and (max-width: 576px) {
     .services__modal-content {
-        padding: 4.5rem 1.5rem 2.5rem;
-    }
-
-    .services__modal-description {
-        padding: 0;
+      padding: 4.5rem 1.5rem 2.5rem;
     }
   
+    .services__modal-description {
+      padding: 0;
+    }
   }
   
   /* For small devices */
   @media screen and (max-width: 350px) {
     .services__container {
-        grid-template-columns: max-content;
+      grid-template-columns: max-content;
     }
-
+  
     .services__content {
-        padding-right: 6rem;
+      padding-right: 6rem;
     }
-
   }
+  
