--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -5,11 +5,39 @@
     padding-bottom: 3rem;
 }
 
+.contact__title {
+    text-align: center;
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
+}
+
 .contact__info {
     display: grid;
     row-gap: 1rem;
     grid-template-columns: 300px;
 }
+
+.contact__card {
+    background-color: var(--container-color);
+    border: 1px solid rgba(0, 0, 0 , 0.1);
+    padding: 1rem;
+    border-radius: 0.75rem;
+    text-align: center;
+}
+
+.contact__card-icon {
+    font-size: 2rem;
+    color: var(--title-color);
+    margin-bottom: var(--mb-0-25);
+}
+
+.contact__card-title,
+.contact__card-data {
+    font-size: var(--small-font-size);
+}
+
+
 
 .contact__form {
     width: 360px;
