--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -109,6 +109,12 @@
     }
 }
 
+/*  Change background header */
+
+.scroll-header {
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+}
+
 /* For small devices */
 @media screen and (max-width: 350px) {
     .nav__menu {
@@ -116,6 +122,6 @@
     }
 
     .nav__list {
-        column-gap: 0; /* Apply column-gap property within .nav__list class */
+        column-gap: 0;
     }
 }
