--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,11 +1,9 @@
-
 .home__container {
     row-gap: 6rem;
-
 }
 
-
 .home__content {
+    display: grid;
     grid-template-columns: 116px repeat(2, 1fr);
     padding-top: 5.5rem;
     column-gap: 2rem;
@@ -21,7 +19,7 @@
 
 .home__social-icon {
     font-size: 2rem;
-    color: var(--tittle-color);
+    color: var(--title-color);
 }
 
 .home__social-icon:hover {
@@ -30,9 +28,7 @@
 
 .home__title {
     font-size: var(--big-font-size);
-    margin-bottom: var(--mb-0-25);
-    margin-bottom: var(--mb-1);
-   
+    margin-bottom: var(--mb-1); 
 }
 
 .home__hand {
@@ -47,7 +43,6 @@
     padding-left: 5.4rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
-
 }
 
 .home__subtitle::before {
@@ -66,38 +61,29 @@
 }
 
 .home__img {
-    background: url(../../assets/giny.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background: url(../../assets/giny.jpg) center/cover no-repeat;
     box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
-    order: 1;
     justify-self: center;
     width: 350px;
     height: 350px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     border-radius: 35%;
-  
 }
 
 @keyframes profile__animate {
     0% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
-
     50% {
         border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
     }
-
     100% {
         border-radius: 60% 40% 300% 70%/80% 30% 70% 40%;
     }
-
 }
 
 .home__scroll {
     margin-left: 9.25rem;
-   
 }
 
 .wheel {
@@ -108,11 +94,9 @@
     0% {
         transform: translateY(0);
     }
-
     30% {
         transform: translateY(3.75rem);
     }
-    
 }
 
 .home__scroll-name {
@@ -125,81 +109,75 @@
 
 .home__scroll-arrow {
     font-size: 1.25rem;
-    color: var(--tittle-color);
+    color: var(--title-color);
 }
+
 /* Breakpoints */
 @media screen and (max-width: 992px) {
     .home__content {
-     grid-template-columns: auto repeat(2, 1fr); /* Corrected value */
-     column-gap: 1.25rem;
+        grid-template-columns: auto repeat(2, 1fr);
+        column-gap: 1.25rem;
     }
- 
+
     .home__hand {
-     width: 26px;
-     height: 26px;
+        width: 26px;
+        height: 26px;
     }
- 
+
     .home__subtitle {
-     padding-left: 3.75rem;
-     margin-bottom: var(--mb-1);
+        padding-left: 3.75rem;
     }
- 
+
     .home__subtitle::before {
-     width: 42px;
-     top: 0.8rem;
+        width: 42px;
+        top: 0.8rem;
     }
- 
+
     .home__description {
-     max-width: initial;
-     margin-bottom: var(--mb-2-5);
+        max-width: initial;
     }
- 
+
     .home__img {
-     width: 250px;
-     height: 250px;
-     box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
     }
- 
+
     .home__scroll {
-     margin-left: 7.5rem;
+        margin-left: 7.5rem;
     }
-   
-   }
-   
-   @media screen and (max-width: 768px) {
-     .home__content {
-         grid-template-columns: 0.5fr 3fr;
-         padding-top: 3.5rem;
-     }
- 
-     .home__img {
-         order: initial;
-         justify-self: initial;
-         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); /* Moved box-shadow here */
-         width: 200px;
-         height: 200px;
-     }
- 
-     .home__data {
-         grid-column: 1/3;
-     }
- 
-     .home__scroll {
-         display: none;
-     }
-   }
-   
-   /* For small devices */
-   @media screen and (max-width: 350px) {
-     .home__img {
-         width: 180px;
-         height: 180px;
-     }
- 
-     .home__hand {
-         width: 22px;
-         height: 22px;
-     }
-    
- }
- 
+}
+
+@media screen and (max-width: 768px) {
+    .home__content {
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
+
+    .home__img {
+        width: 200px;
+        height: 200px;
+        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
+    }
+
+    .home__data {
+        grid-column: 1/3;
+    }
+
+    .home__scroll {
+        display: none;
+    }
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+    .home__img {
+        width: 180px;
+        height: 180px;
+    }
+
+    .home__hand {
+        width: 22px;
+        height: 22px;
+    }
+}
