--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,9 +1,11 @@
+
 .home__container {
     row-gap: 6rem;
+
 }
 
+
 .home__content {
-    display: grid;
     grid-template-columns: 116px repeat(2, 1fr);
     padding-top: 5.5rem;
     column-gap: 2rem;
@@ -19,7 +21,7 @@
 
 .home__social-icon {
     font-size: 2rem;
-    color: var(--title-color);
+    color: var(--tittle-color);
 }
 
 .home__social-icon:hover {
@@ -28,8 +30,9 @@
 
 .home__title {
     font-size: var(--big-font-size);
-    margin-bottom: var(--mb-1); 
+    margin-bottom: var(--mb-1);
 }
+
 
 .home__hand {
     width: 38px;
@@ -43,6 +46,7 @@
     padding-left: 5.4rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
+
 }
 
 .home__subtitle::before {
@@ -61,29 +65,38 @@
 }
 
 .home__img {
-    background: url(../../assets/giny.jpg) center/cover no-repeat;
+    background: url(../../assets/giny.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
+    order: 1;
     justify-self: center;
     width: 350px;
     height: 350px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     border-radius: 35%;
+  
 }
 
 @keyframes profile__animate {
     0% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     }
+
     50% {
         border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
     }
+
     100% {
         border-radius: 60% 40% 300% 70%/80% 30% 70% 40%;
     }
+
 }
 
 .home__scroll {
     margin-left: 9.25rem;
+   
 }
 
 .wheel {
@@ -94,9 +107,11 @@
     0% {
         transform: translateY(0);
     }
+
     30% {
         transform: translateY(3.75rem);
     }
+    
 }
 
 .home__scroll-name {
@@ -109,14 +124,77 @@
 
 .home__scroll-arrow {
     font-size: 1.25rem;
-    color: var(--title-color);
+    color: var(--tittle-color);
 }
-
 /* Breakpoints */
 @media screen and (max-width: 992px) {
     .home__content {
-        grid-template-columns: auto repeat(2, 1fr);
+     grid-template-columns: auto repeat(2, 1fr); 
+     column-gap: 1.25rem;
+    }
+ 
+    .home__hand {
+     width: 26px;
+     height: 26px;
+    }
+ 
+    .home__subtitle {
+     padding-left: 3.75rem;
+     margin-bottom: var(--mb-1);
+    }
+ 
+    .home__subtitle::before {
+     width: 42px;
+     top: 0.8rem;
+    }
+ 
+    .home__description {
+     max-width: initial;
+     margin-bottom: var(--mb-2-5);
+    }
+ 
+    .home__img {
+     width: 250px;
+     height: 250px;
+     box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+    }
+ 
+    .home__scroll {
+     margin-left: 7.5rem;
+    }
+   
+   }
+   
+   @media screen and (max-width: 768px) {
+     .home__content {
+         grid-template-columns: 0.5fr 3fr;
+         padding-top: 3.5rem;
+     }
+ 
+     .home__img {
+         order: initial;
+         justify-self: initial;
+         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); 
+         width: 200px;
+         height: 200px;
+     }
+ 
+     .home__data {
+         grid-column: 1/3;
+     }
+ 
+     .home__scroll {
+         display: none;
+     }
+   }
+   
+  /* Breakpoints */
+@media screen and (max-width: 576px) {
+    .home__content {
+        grid-template-columns: auto repeat(2, 1fr); 
         column-gap: 1.25rem;
+        padding-top: 5rem; 
+        margin-top: 3rem; 
     }
 
     .home__hand {
@@ -126,6 +204,7 @@
 
     .home__subtitle {
         padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
     }
 
     .home__subtitle::before {
@@ -135,6 +214,7 @@
 
     .home__description {
         max-width: initial;
+        margin-bottom: var(--mb-2-5);
     }
 
     .home__img {
@@ -145,39 +225,6 @@
 
     .home__scroll {
         margin-left: 7.5rem;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .home__content {
-        grid-template-columns: 0.5fr 3fr;
-        padding-top: 3.5rem;
-    }
-
-    .home__img {
-        width: 200px;
-        height: 200px;
-        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
-    }
-
-    .home__data {
-        grid-column: 1/3;
-    }
-
-    .home__scroll {
-        display: none;
-    }
-}
-
-/* For small devices */
-@media screen and (max-width: 350px) {
-    .home__img {
-        width: 180px;
-        height: 180px;
-    }
-
-    .home__hand {
-        width: 22px;
-        height: 22px;
-    }
+   
+ }
 }
