--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -126,6 +126,49 @@
     font-size: 1.25rem;
     color: var(--tittle-color);
 }
+
+
+
+.typing-animation {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+   
+}
+.highlight {
+    color: #F08080;
+  }
+  
+  
+  .typing-animation span {
+    border-right: 2px solid var(--tittle-color); /* Add a border to create the typing effect */
+    animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
+  }
+  
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+    to {
+      width: 100%;
+    }
+  }
+  
+  @keyframes blink-caret {
+    from,
+    to {
+      border-color: transparent;
+    }
+    50% {
+      border-color: var(--tittle-color);
+    }
+  }
+  
+  
+  
+  
+
+
 /* Breakpoints */
 @media screen and (max-width: 992px) {
     .home__content {
