--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -60,3 +60,57 @@
 .work__button:hover .work__button-icon {
     transform: translateX(0.25rem);
 }
+
+/* Active Work */
+.active-work {
+    background-color: black;;
+    color: var(--container-color);
+}
+
+@media screen and (max-width: 992px) {
+    .work__container {
+        gap: 1.25rem;
+    }
+
+    .work__card{
+        padding: 1rem;
+    }
+
+    .work__img {
+        margin-bottom: 0.75rem;
+    }
+    .work__title {
+        margin-bottom: 0.25rem;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .work__container {
+        grid-template-columns: max-content;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .work__container{
+        grid-template-columns: 1fr;
+    }
+
+    .work__img {
+        width: 100%;
+    }
+
+
+}
+
+
+@media screen and (max-width: 350px) {
+    .work__item {
+        font-size: var(--small-font-size);
+    }
+
+
+    .work__filters {
+        column-gap: 0.25rem;
+    }
+}
