--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -79,6 +79,33 @@
   
 }
 
+.button-container {
+    text-align: center; /* Center the button horizontally */
+    margin-top: 1.5rem; /* Adjust margin-top to push the button down */
+  }
+  
+  .button {
+    display: inline-block;
+    background-color: var(--tittle-color);
+    color: var(--container-color);
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    font-weight: var(--font-medium);
+  }
+  
+  /* Adjust the button icon position if necessary */
+  .button__icon {
+    vertical-align: middle;
+    margin-left: 0.5rem; /* Adjust the margin as needed */
+  }
+  
+  
+  
+  
+  
+
+
+
 @keyframes profile__animate {
     0% {
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
