--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -118,7 +118,7 @@
     left: 1.25rem;
     font-size: var(--smaller-font-size);
     padding: 0.25rem;
-    background-color: var(--body-color);
+    background-color: #fff;
     z-index: 10;
 }
 
