--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -46,11 +46,11 @@
 
 .active-link,
 .nav__link:hover {
-    color: #8B0000;
+    color: #e42020;
 }
 
 .nav__link:hover {
-    color: #8B0000;
+    color: #e42020;
 }
 
 
