--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -79,8 +79,8 @@
 }
 
 .button-container {
-  text-align:start; /* Center the button horizontally */
-  margin-top: 2rem; /* Adjust margin-top to push the button down */
+  text-align:start; 
+  margin-top: 2rem;
   margin-right: 15rem;
 }
 
@@ -92,10 +92,10 @@
   font-weight: var(--font-medium);
 }
 
-/* Adjust the button icon position if necessary */
+
 .button__icon {
   vertical-align: middle;
-  margin-left: 0.5rem; /* Adjust the margin as needed */
+  margin-left: 0.5rem; 
 }
 
   
@@ -162,7 +162,8 @@
     margin-bottom: 1rem;
 }
 .highlight {
-    color: #F08080;
+    /* color: #e42020; */
+    color: #e73636;
   }
   
   
