--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -195,70 +195,77 @@
   
   
 
-
-/* Breakpoints */
+/* Media queries */
 @media screen and (max-width: 992px) {
     .home__content {
-     grid-template-columns: auto repeat(2, 1fr); 
-     column-gap: 1.25rem;
+        grid-template-columns: auto repeat(2, 1fr); 
+        column-gap: 1.25rem;
     }
- 
+
     .home__hand {
-     width: 26px;
-     height: 26px;
+        width: 26px;
+        height: 26px;
     }
- 
+
     .home__subtitle {
-     padding-left: 3.75rem;
-     margin-bottom: var(--mb-1);
+        padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
     }
- 
+
     .home__subtitle::before {
-     width: 42px;
-     top: 0.8rem;
+        width: 42px;
+        top: 0.8rem;
     }
- 
+
     .home__description {
-     max-width: initial;
-     margin-bottom: var(--mb-2-5);
+        max-width: initial;
+        margin-bottom: var(--mb-2-5);
     }
- 
+
     .home__img {
-     width: 250px;
-     height: 250px;
-     box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
     }
- 
+
     .home__scroll {
-     margin-left: 7.5rem;
+        margin-left: 7.5rem;
     }
-   
-   }
-   
-   @media screen and (max-width: 768px) {
-     .home__content {
-         grid-template-columns: 0.5fr 3fr;
-         padding-top: 3.5rem;
-     }
- 
-     .home__img {
-         order: initial;
-         justify-self: initial;
-         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); 
-         width: 200px;
-         height: 200px;
-     }
- 
-     .home__data {
-         grid-column: 1/3;
-     }
- 
-     .home__scroll {
-         display: none;
-     }
-   }
-   
-  /* Breakpoints */
+
+    .button {
+        padding: 0.7rem 1.3rem;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .home__content {
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
+
+    .home__img {
+        order: initial;
+        justify-self: initial;
+        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); 
+        width: 200px;
+        height: 200px;
+    }
+
+    .home__data {
+        grid-column: 1/3;
+    }
+
+    .home__scroll {
+        display: none;
+    }
+
+    .button {
+        padding: 0.6rem 1.1rem;
+        font-size: 12px;
+    }
+}
+
 @media screen and (max-width: 576px) {
     .home__content {
         grid-template-columns: auto repeat(2, 1fr); 
@@ -295,6 +302,10 @@
 
     .home__scroll {
         margin-left: 7.5rem;
-   
- }
+    }
+
+    .button {
+        padding: 0.5rem 0.9rem;
+        font-size: 10px;
+    }
 }
