--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,5 +1,5 @@
 .services__title {
-  padding-top: 6%;
+  padding-top: 3%;
 
 }
 .services__container {
@@ -66,7 +66,7 @@
     width: 500px;
     position: relative;
     background-color: var(--container-color);
-    padding: 4.5rem 2.5rem  2.5rem;
+    padding: 3.2rem 2.5rem  2.5rem;
     border-radius: 1.5rem;
 }
 
@@ -80,9 +80,11 @@
 }
 
 
-.services__modal-title,
+.services__modal-title {
+  text-align: center;
+}
 .services__modal-description {
-    text-align: center;
+    text-align: justify;
 }
 
 .services__modal-title {
