--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -63,7 +63,7 @@
 }
 
 .services__modal-content {
-    width: 500px;
+    width: 600px;
     position: relative;
     background-color: var(--container-color);
     padding: 3.2rem 2.5rem  2.5rem;
@@ -90,17 +90,18 @@
 .services__modal-title {
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
-    margin-bottom: var(--mb-1);
+    margin-bottom: var(--mb-2);
 }
 
 .services__modal-description {
     font-size: var(--small-font-size);
     padding: 0 3.5rem;
     margin-bottom: var(--mb-2);
+  
 }
 
 .services__modal-service {
-    row-gap: 0.75rem;
+    row-gap: 0.50rem;
 }
 
 .services__modal-service {
@@ -110,12 +111,13 @@
 }
 
 .services__modal-icon {
-    color: var(--title-color);
+    /* color:#00008B; */
     font-size: 1.1rem;
 }
 
 .services__modal-info {
     font-size: var(--small-font-size);
+  
 }
 
 /* Active modal */
