--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -1,3 +1,75 @@
+.services__modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .active-modal {
+    display: flex;
+  }
+  
+  .services__modal-content {
+    background-color: var(--container-color);
+    padding: 2rem;
+    border-radius: 1rem;
+    position: relative;
+    width: 90%;
+    max-width: 500px;
+    text-align: center;
+  }
+  
+  .services__modal-close {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+  }
+  
+  .services__modal-title {
+    margin-bottom: 1rem;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .services__modal-description {
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    color: var(--text-color);
+  }
+  
+  .services__modal-services {
+    list-style: none;
+    padding: 0;
+    display: grid;
+    gap: 0.5rem;
+  }
+  
+  .services__modal-service {
+    display: flex;
+    align-items: center;
+  }
+  
+  .services__modal-icon {
+    color: var(--primary-color);
+    margin-right: 0.5rem;
+  }
+  
+  .services__modal-info {
+    font-size: 1rem;
+    color: var(--text-color);
+  }
+  
+
+
+
 .work__filters {
     display: flex;
     justify-content: center;
