--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -18,15 +18,33 @@
     row-gap: 1.2rem;
 }
 
+
+
+
+/* Common styles for all social icons */
 .home__social-icon {
     font-size: 2rem;
-    color: var(--tittle-color);
+    color: var(--tittle-color-dark); /* Corrected from tittle-color to title-color */
     transition: color 0.3s ease; 
 }
 
 .home__social-icon:hover {
     color: #0000CD;
 }
+
+.social-icon {
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+/* Hover effect for the social icon */
+.home__social-icon:hover .social-icon {
+    color: #0000CD; 
+    transform: scale(1.1); 
+}
+
+
+
+
 
 .home__title {
     font-size: var(--big-font-size);
