--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -96,6 +96,7 @@
     height: 350px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     border-radius: 35%;
+    margin-top: 1rem;
   
 }
 
@@ -211,8 +212,7 @@
       border-color: var(--tittle-color);
     }
   }
-  
-  
+
   
   
 
@@ -247,6 +247,7 @@
         width: 250px;
         height: 250px;
         box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+        
     }
 
     .home__scroll {
@@ -319,6 +320,7 @@
         width: 250px;
         height: 250px;
         box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+        margin-left: 10.5%;
     }
 
     .home__scroll {
@@ -327,6 +329,80 @@
 
     .button {
         padding: 0.5rem 0.9rem;
-        font-size: 10px;
+        font-size: 12px;
     }
+
+
+    @media screen and (max-width: 350px) {
+        .home__container {
+          row-gap: 4rem; 
+        }
+      
+        .home__content {
+          grid-template-columns: 1fr; 
+          padding-top: 3rem;
+          column-gap: 1rem; 
+          align-items: center;
+          margin-top: 2rem; 
+        }
+      
+        .home__social {
+          row-gap: 1rem; 
+        }
+      
+        .home__social-icon {
+          font-size: 1.5rem; 
+        }
+      
+        .home__title {
+          font-size: var(--h2-font-size); 
+        }
+      
+        .home__subtitle {
+          font-size: var(--h4-font-size);
+          padding-left: 2rem; 
+        }
+      
+        .home__subtitle::before {
+          width: 30px; 
+          top: 0.6rem; 
+        }
+      
+        .home__description {
+          max-width: initial; 
+          margin-bottom: 1rem; 
+        }
+      
+        .home__img {
+          width: 150px; 
+          height: 150px;
+          box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%); 
+        }
+      
+        .button-container {
+          text-align: start; /* Centered text alignment */
+          margin-top: 1rem; /* Reduced top margin */
+          margin-left: 100rem; /* Removed right margin */
+        }
+      
+        .button {
+          padding: 0.6rem 0.10rem; /* Reduced padding */
+          font-size: 14px; /* Smaller font size */
+        }
+      
+        .button__icon {
+          width: 20px; /* Reduced icon size */
+          height: 20px; /* Reduced icon size */
+          margin-left: 0.3rem; /* Adjusted margin */
+        }
+      
+        .typing-animation span {
+          border-right: 1px solid var(--tittle-color); 
+        }
+      
+        .home__scroll {
+          display: none; 
+        }
+      }
+      
 }
