--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -6,7 +6,7 @@
 
 .home__content {
     grid-template-columns: 116px repeat(2, 1fr);
-    padding-top: 4rem;
+    padding-top: 2rem;
     column-gap: 2rem;
     align-items: center;
     margin-top: 5rem;
@@ -92,11 +92,12 @@
     box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%);
     order: 1;
     justify-self: center;
-    width: 350px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     animation: profile__animate 8s ease-in-out infinite 1s;
     border-radius: 35%;
-    margin-top: 1rem;
+    margin-top: 0.3rem;
+    margin-left: 2%;
   
 }
 
@@ -176,42 +177,42 @@
 }
 
 
-
 .typing-animation {
     overflow: hidden;
     display: inline-block;
     vertical-align: bottom;
     margin-bottom: 1rem;
 }
+
 .highlight {
-    /* color: #e42020; */
     color: #e73636;
-  }
-  
-  
-  .typing-animation span {
-    border-right: 2px solid var(--tittle-color); /* Add a border to create the typing effect */
+}
+
+.typing-animation span {
+    border-right: 2px solid var(--tittle-color);
     animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
-  }
-  
-  @keyframes typing {
+}
+
+@keyframes typing {
     from {
-      width: 0;
+        width: 0;
     }
     to {
-      width: 100%;
+        width: 100%;
     }
-  }
-  
-  @keyframes blink-caret {
+}
+
+@keyframes blink-caret {
     from,
     to {
-      border-color: transparent;
+        border-color: transparent;
     }
     50% {
-      border-color: var(--tittle-color);
+        border-color: var(--tittle-color);
     }
-  }
+}
+
+
 
   
   
@@ -220,7 +221,7 @@
 @media screen and (max-width: 992px) {
     .home__content {
         grid-template-columns: auto repeat(2, 1fr); 
-        column-gap: 1.25rem;
+        column-gap: 0.25rem;
     }
 
     .home__hand {
@@ -247,6 +248,7 @@
         width: 250px;
         height: 250px;
         box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+        margin-left: 2%;
         
     }
 
@@ -263,7 +265,7 @@
 @media screen and (max-width: 768px) {
     .home__content {
         grid-template-columns: 0.5fr 3fr;
-        padding-top: 3.5rem;
+        padding-top: 0.5rem;
     }
 
     .home__img {
@@ -272,6 +274,7 @@
         box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%); 
         width: 200px;
         height: 200px;
+        margin-left: 2%;
     }
 
     .home__data {
@@ -292,8 +295,8 @@
     .home__content {
         grid-template-columns: auto repeat(2, 1fr); 
         column-gap: 1.25rem;
-        padding-top: 5rem; 
-        margin-top: 3rem; 
+        padding-top: 0.5rem; 
+        margin-top: 0.3rem; 
     }
 
     .home__hand {
@@ -320,7 +323,7 @@
         width: 250px;
         height: 250px;
         box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
-        margin-left: 3.3%;
+        margin-left: 15%;
     }
 
     .home__scroll {
@@ -333,77 +336,87 @@
     }
 
 
-    @media screen and (max-width: 350px) {
-        .home__container {
-          row-gap: 4rem; 
-        }
-      
-        .home__content {
-          grid-template-columns: 1fr; 
-          padding-top: 3rem;
-          column-gap: 1rem; 
-          align-items: center;
-          margin-top: 2rem; 
-        }
-      
-        .home__social {
-          row-gap: 1rem; 
-        }
-      
-        .home__social-icon {
-          font-size: 1.5rem; 
-        }
-      
-        .home__title {
-          font-size: var(--h2-font-size); 
-        }
-      
-        .home__subtitle {
-          font-size: var(--h4-font-size);
-          padding-left: 2rem; 
-        }
-      
-        .home__subtitle::before {
-          width: 30px; 
-          top: 0.6rem; 
-        }
-      
-        .home__description {
-          max-width: initial; 
-          margin-bottom: 1rem; 
-        }
-      
-        .home__img {
-          width: 150px; 
-          height: 150px;
-          box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%); 
-          margin-left: 3.3%;
-        }
-      
-        .button-container {
-          text-align: start; /* Centered text alignment */
-          margin-top: 1rem; /* Reduced top margin */
-          margin-left: 100rem; /* Removed right margin */
-        }
-      
-        .button {
-          padding: 0.6rem 0.10rem; /* Reduced padding */
-          font-size: 14px; /* Smaller font size */
-        }
-      
-        .button__icon {
-          width: 20px; /* Reduced icon size */
-          height: 20px; /* Reduced icon size */
-          margin-left: 0.3rem; /* Adjusted margin */
-        }
-      
-        .typing-animation span {
-          border-right: 1px solid var(--tittle-color); 
-        }
-      
-        .home__scroll {
-          display: none; 
-        }
-      }
-      
-}
+   /* For small devices */
+@media screen and (max-width: 350px) {
+    :root {
+      --big-font-size: 2.25rem;
+    }
+  
+    .container {
+      margin-left: var(--mb-1);
+      margin-right: var(--mb-1);
+    }
+  
+    .home__container {
+      row-gap: 0.4rem; 
+    }
+  
+    .home__content {
+      grid-template-columns: 1fr; 
+      padding-top: 0.1rem; 
+      column-gap: 0.1rem; 
+      align-items: center;
+      margin-top: 0.1rem; 
+    }
+  
+    .home__social {
+      row-gap: 1rem; 
+    }
+  
+    .home__social-icon {
+      font-size: 1.5rem; 
+    }
+  
+    .home__title {
+      font-size: var(--h2-font-size); 
+    }
+  
+    .home__subtitle {
+      font-size: var(--h4-font-size);
+      padding-left: 2rem; 
+    }
+  
+    .home__subtitle::before {
+      width: 30px; 
+      top: 0.6rem; 
+    }
+  
+    .home__description {
+      max-width: initial; 
+      margin-bottom: 1rem; 
+    }
+  
+    .home__img {
+      width: 150px; 
+      height: 150px;
+      box-shadow: inset 0 0 0 4px rgb(255 255 255 / 30%); 
+      margin-left: 2%;
+    }
+  
+    .button-container {
+        text-align:center; 
+        margin-top: 2rem;
+        margin-right: 15rem;
+        margin-left: 30rem;
+    }
+  
+    .button {
+      padding: 6rem 10rem; 
+      font-size: 24px; 
+    }
+  
+    .button__icon {
+      width: 25px;
+      height: 25px; 
+      margin-left: 0.3rem; 
+    }
+  
+    .typing-animation span {
+      border-right: 1px solid var(--tittle-color); 
+    }
+  
+    .home__scroll {
+      display: none; 
+    }
+  }
+}  
