--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -155,6 +155,13 @@
     .work__title {
         margin-bottom: 0.25rem;
     }
+    .services__modal-description {
+        font-size: 0.8rem; 
+  
+    }
+    .services__modal-info {
+        font-size: 0.89rem;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -168,6 +175,13 @@
 
     .work__img {
         width: 100%;
+    }
+    .services__modal-description {
+        font-size: 0.8rem; 
+  
+    }
+    .services__modal-info {
+        font-size: 0.89rem;
     }
 }
 
@@ -189,6 +203,13 @@
     .break-mobile {
         display: none;
     }
+    .services__modal-description {
+        font-size: 0.8rem; 
+  
+    }
+    .services__modal-info {
+        font-size: 0.89rem;
+    }
 }
 
 @media screen and (max-width: 350px) {
@@ -209,22 +230,26 @@
     }
 
     .services__modal-title {
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .services__modal-description {
-        font-size: 0.5rem; /* Decreased font size for description */
+        font-size: 0.7rem; 
+  
     }
 
     .services__modal-info {
-        font-size: 0.875rem; /* Decreased font size for list items */
+        font-size: 0.775rem; 
     }
 
     .work__title {
-        font-size: 1rem; /* Decreased font size for project title */
+        font-size: 0.8rem; 
     }
 
     .work__button {
-        font-size: 0.875rem; /* Decreased font size for buttons */
+        font-size: 0.875rem; 
+    }
+    .services__modal-info {
+        font-size: 0.89rem;
     }
 }
