--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -108,8 +108,8 @@
     }
 
     .about__description {
-        padding: 0 4rem; 
-        margin-bottom: 1.5rem;
+        padding: 0 5rem; 
+        margin-bottom: 2rem;
     }
 
     .button-container {
@@ -124,10 +124,7 @@
     }
 
     .about__description {
-    padding: 0 2rem 0 0;
-    margin-bottom: 1rem;
-    border-radius: 0.50rem;
-    
+        padding: 0;
     }
     .button-container {
         margin-right: 0; /* Remove right margin */
