--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -75,7 +75,9 @@
 
 .home__description {
     max-width: 400px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.6rem;
+    font-size: medium;
+    
 }
 
 .home__img {
@@ -236,6 +238,7 @@
     .home__description {
         max-width: initial;
         margin-bottom: var(--mb-2-5);
+        font-size: medium;
     }
 
     .home__img {
@@ -311,6 +314,7 @@
     .home__description {
         max-width: initial;
         margin-bottom: var(--mb-2-5);
+        font-size: medium;
     }
 
     .home__img {
@@ -378,6 +382,7 @@
     .home__description {
       max-width: initial; 
       margin-bottom: 1rem; 
+      font-size: medium;
     }
   
     .home__img {
